# dem-terrain

./: .env.example  .gitignore  CLAUDE.md  README.md  SC_README.md  main.py  pyproject.toml
docs/: gdal-analysis.md  workflow.md
infra/: .terraform.lock.hcl  main.tf  outputs.tf  secrets.tfvars.example  startup.sh  variables.tf
